--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
