automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -494,7 +494,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.mdn(star_rating)"
+   ]
   },
   {
    "cell_type": "markdown",
