--- a/index.ipynb
+++ b/index.ipynb
@@ -518,11 +518,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10486"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.play_star"
+    "df.play_star_rating.count()"
    ]
   },
   {
@@ -537,7 +548,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.list_pr"
+   ]
   },
   {
    "cell_type": "markdown",
