--- a/index.ipynb
+++ b/index.ipynb
@@ -545,11 +545,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.9804293059243"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.list_pr"
+    "df.list_price.std()"
    ]
   },
   {
