--- a/index.ipynb
+++ b/index.ipynb
@@ -572,11 +572,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6049650.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.piece_count."
+    "df.piece_count.sum()"
    ]
   },
   {
@@ -591,7 +602,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df."
+   ]
   },
   {
    "cell_type": "markdown",
