automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -633,7 +633,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.review_difficulty.uni"
+   ]
   },
   {
    "cell_type": "markdown",
