--- a/index.ipynb
+++ b/index.ipynb
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = None"
+    "string_df = df.applymap(lamb)"
    ]
   },
   {
