--- a/index.ipynb
+++ b/index.ipynb
@@ -706,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = df.applymap(lamb)"
+    "string_df = df.applymap(lambda x: str(x))"
    ]
   },
   {
