automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -733,7 +733,10 @@
    ],
    "source": [
     "string_df = df.applymap(lambda x: str(x))\n",
-    "df.info()"
+    "df.info()\n",
+    "\n",
+    "string_df = df.applymap(lambda x: str(x))\n",
+    "string_df.info()"
    ]
   },
   {
